--- a/notebooks/nfl_extract.ipynb
+++ b/notebooks/nfl_extract.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7c19753a",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "90d77da4",
    "metadata": {},
    "outputs": [
@@ -153,8 +153,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 32 team pages.\n",
-      "Scraped 469 unique player-position records.\n",
       "            Player Team Position  Tier\n",
       "0   Palmer, Joshua  BUF       WR     1\n",
       "1  Shavers, Tyrell  BUF       WR     2\n",
@@ -165,13 +163,13 @@
     }
    ],
    "source": [
-    "df = scrape_all_to_dataframe()\n",
-    "print(df.head())"
+    "df_new = scrape_all_to_dataframe()\n",
+    "print(df_new.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "40fe0ca4",
    "metadata": {},
    "outputs": [
@@ -212,7 +210,7 @@
        " 'WAS']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "c364e799",
    "metadata": {},
    "outputs": [
@@ -232,7 +230,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Tom\\AppData\\Local\\Temp\\ipykernel_23388\\1316146615.py:4: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\Tom\\AppData\\Local\\Temp\\ipykernel_20312\\2036481681.py:4: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df_pg = pd.read_sql_query(query, conn)\n"
      ]
     }
@@ -241,14 +239,14 @@
     "\n",
     "conn = get_connection('nfl_data')\n",
     "\n",
-    "query = \"SELECT * FROM public.teams ORDER BY team_id ASC\"\n",
+    "query = \"SELECT * FROM public.player_seasons ORDER BY player_season_id ASC\"\n",
     "df_pg = pd.read_sql_query(query, conn)\n",
     "conn.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "db9f9067",
    "metadata": {},
    "outputs": [
@@ -258,7 +256,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,8 +269,774 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "aff42afa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_season_id</th>\n",
+       "      <th>player_id</th>\n",
+       "      <th>season_id</th>\n",
+       "      <th>tier</th>\n",
+       "      <th>notes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>471</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>472</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>473</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>474</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>475</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   player_season_id  player_id  season_id  tier notes\n",
+       "0                 1        471          1     1  None\n",
+       "1                 2        472          1     2  None\n",
+       "2                 3        473          1     1  None\n",
+       "3                 4        474          1     2  None\n",
+       "4                 5        475          1     1  None"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_pg.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "bdca3812",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = get_connection('nfl_data')\n",
+    "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8d95f63f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === CONFIG ===\n",
+    "SEASON_ID = 1\n",
+    "DELETE_MISSING_PLAYERS = True  # set to False if you only want to remove from player_seasons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7880c4ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Helper functions ===\n",
+    "\n",
+    "def get_team_id(team_code):\n",
+    "    cur.execute(\"SELECT team_id FROM public.teams WHERE abbreviation = %s\", (team_code,))\n",
+    "    res = cur.fetchone()\n",
+    "    if res:\n",
+    "        return res[0]\n",
+    "\n",
+    "def get_or_create_player(player_name, position, team_code):\n",
+    "    team_id = get_team_id(team_code)\n",
+    "    cur.execute(\"\"\"\n",
+    "        SELECT player_id FROM public.players \n",
+    "        WHERE player_name = %s AND team_id = %s\n",
+    "    \"\"\", (player_name, team_id))\n",
+    "    res = cur.fetchone()\n",
+    "    if res:\n",
+    "        return res[0]\n",
+    "    cur.execute(\"\"\"\n",
+    "        INSERT INTO public.players (player_name, position, team_id)\n",
+    "        VALUES (%s, %s, %s)\n",
+    "        RETURNING player_id\n",
+    "    \"\"\", (player_name, position, team_id))\n",
+    "    player_id = cur.fetchone()[0]\n",
+    "    conn.commit()\n",
+    "    return player_id\n",
+    "\n",
+    "def upsert_player_season(player_id, season_id, tier):\n",
+    "    cur.execute(\"\"\"\n",
+    "        SELECT player_season_id FROM public.player_seasons\n",
+    "        WHERE player_id = %s AND season_id = %s\n",
+    "    \"\"\", (player_id, season_id))\n",
+    "    res = cur.fetchone()\n",
+    "    if res:\n",
+    "        cur.execute(\"\"\"\n",
+    "            UPDATE public.player_seasons\n",
+    "            SET tier = %s\n",
+    "            WHERE player_season_id = %s\n",
+    "        \"\"\", (tier, res[0]))\n",
+    "    else:\n",
+    "        cur.execute(\"\"\"\n",
+    "            INSERT INTO public.player_seasons (player_id, season_id, tier)\n",
+    "            VALUES (%s, %s, %s)\n",
+    "        \"\"\", (player_id, season_id, tier))\n",
+    "    conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "71838dd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4,)\n",
+      "(4,)\n",
+      "(4,)\n",
+      "(4,)\n",
+      "(4,)\n",
+      "(4,)\n",
+      "(4,)\n",
+      "(4,)\n",
+      "(4,)\n",
+      "(4,)\n",
+      "(4,)\n",
+      "(4,)\n",
+      "(4,)\n",
+      "(4,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(19,)\n",
+      "(21,)\n",
+      "(21,)\n",
+      "(21,)\n",
+      "(21,)\n",
+      "(21,)\n",
+      "(21,)\n",
+      "(21,)\n",
+      "(21,)\n",
+      "(21,)\n",
+      "(21,)\n",
+      "(21,)\n",
+      "(21,)\n",
+      "(21,)\n",
+      "(21,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(24,)\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(3,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(7,)\n",
+      "(8,)\n",
+      "(8,)\n",
+      "(8,)\n",
+      "(8,)\n",
+      "(8,)\n",
+      "(8,)\n",
+      "(8,)\n",
+      "(8,)\n",
+      "(8,)\n",
+      "(8,)\n",
+      "(8,)\n",
+      "(26,)\n",
+      "(26,)\n",
+      "(26,)\n",
+      "(26,)\n",
+      "(26,)\n",
+      "(26,)\n",
+      "(26,)\n",
+      "(26,)\n",
+      "(26,)\n",
+      "(26,)\n",
+      "(26,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(13,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(14,)\n",
+      "(15,)\n",
+      "(15,)\n",
+      "(15,)\n",
+      "(15,)\n",
+      "(15,)\n",
+      "(15,)\n",
+      "(15,)\n",
+      "(15,)\n",
+      "(15,)\n",
+      "(15,)\n",
+      "(15,)\n",
+      "(15,)\n",
+      "(15,)\n",
+      "(30,)\n",
+      "(30,)\n",
+      "(30,)\n",
+      "(30,)\n",
+      "(30,)\n",
+      "(30,)\n",
+      "(30,)\n",
+      "(30,)\n",
+      "(30,)\n",
+      "(30,)\n",
+      "(30,)\n",
+      "(30,)\n",
+      "(30,)\n",
+      "(30,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(16,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(32,)\n",
+      "(18,)\n",
+      "(18,)\n",
+      "(18,)\n",
+      "(18,)\n",
+      "(18,)\n",
+      "(18,)\n",
+      "(18,)\n",
+      "(18,)\n",
+      "(18,)\n",
+      "(18,)\n",
+      "(18,)\n",
+      "(18,)\n",
+      "(18,)\n",
+      "(18,)\n",
+      "(9,)\n",
+      "(9,)\n",
+      "(9,)\n",
+      "(9,)\n",
+      "(9,)\n",
+      "(9,)\n",
+      "(9,)\n",
+      "(9,)\n",
+      "(9,)\n",
+      "(9,)\n",
+      "(9,)\n",
+      "(9,)\n",
+      "(9,)\n",
+      "(23,)\n",
+      "(23,)\n",
+      "(23,)\n",
+      "(23,)\n",
+      "(23,)\n",
+      "(23,)\n",
+      "(23,)\n",
+      "(23,)\n",
+      "(23,)\n",
+      "(23,)\n",
+      "(23,)\n",
+      "(23,)\n",
+      "(23,)\n",
+      "(23,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(25,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(31,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(6,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(11,)\n",
+      "(12,)\n",
+      "(12,)\n",
+      "(12,)\n",
+      "(12,)\n",
+      "(12,)\n",
+      "(12,)\n",
+      "(12,)\n",
+      "(12,)\n",
+      "(12,)\n",
+      "(12,)\n",
+      "(12,)\n",
+      "(12,)\n",
+      "(12,)\n",
+      "(12,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(20,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(2,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(5,)\n",
+      "(22,)\n",
+      "(22,)\n",
+      "(22,)\n",
+      "(22,)\n",
+      "(22,)\n",
+      "(22,)\n",
+      "(22,)\n",
+      "(22,)\n",
+      "(22,)\n",
+      "(22,)\n",
+      "(22,)\n",
+      "(22,)\n",
+      "(22,)\n",
+      "(22,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(29,)\n",
+      "(1,)\n",
+      "(1,)\n",
+      "(1,)\n",
+      "(1,)\n",
+      "(1,)\n",
+      "(1,)\n",
+      "(1,)\n",
+      "(1,)\n",
+      "(1,)\n",
+      "(1,)\n",
+      "(1,)\n",
+      "(1,)\n",
+      "(1,)\n",
+      "(1,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(17,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(27,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "(28,)\n",
+      "✅ Upserts complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "# === Step 1: Insert or update new data ===\n",
+    "new_player_ids = []\n",
+    "for _, row in df_new.iterrows():\n",
+    "    player_name = row['Player']\n",
+    "    team_code = row['Team']\n",
+    "    position = row['Position']\n",
+    "    tier = row['Tier']\n",
+    "\n",
+    "    player_id = get_or_create_player(player_name, position, team_code)\n",
+    "    upsert_player_season(player_id, SEASON_ID, tier)\n",
+    "    new_player_ids.append(player_id)\n",
+    "\n",
+    "print(\"✅ Upserts complete\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "835964e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🗑 Removing 22 players from player_seasons...\n",
+      "🏁 Database synchronization complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# === Step 2: Remove players no longer in list ===\n",
+    "cur.execute(\"SELECT player_id FROM public.player_seasons WHERE season_id = %s\", (SEASON_ID,))\n",
+    "existing_player_ids = [row[0] for row in cur.fetchall()]\n",
+    "\n",
+    "players_to_remove = list(set(existing_player_ids) - set(new_player_ids))\n",
+    "\n",
+    "if players_to_remove:\n",
+    "    print(f\"🗑 Removing {len(players_to_remove)} players from player_seasons...\")\n",
+    "\n",
+    "    # Remove from player_seasons\n",
+    "    cur.execute(\"\"\"\n",
+    "        DELETE FROM public.player_seasons\n",
+    "        WHERE season_id = %s AND player_id = ANY(%s)\n",
+    "    \"\"\", (SEASON_ID, players_to_remove))\n",
+    "    conn.commit()\n",
+    "\n",
+    "    if DELETE_MISSING_PLAYERS:\n",
+    "        # Remove from players if no longer in any season\n",
+    "        cur.execute(\"\"\"\n",
+    "            DELETE FROM public.players\n",
+    "            WHERE player_id IN (\n",
+    "                SELECT p.player_id FROM public.players p\n",
+    "                LEFT JOIN player_seasons ps ON ps.player_id = p.player_id\n",
+    "                WHERE ps.player_id IS NULL\n",
+    "            )\n",
+    "        \"\"\")\n",
+    "        conn.commit()\n",
+    "else:\n",
+    "    print(\"✅ No players to remove\")\n",
+    "\n",
+    "print(\"🏁 Database synchronization complete!\")\n",
+    "\n",
+    "cur.close()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e4fa5e81",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[896,\n",
+       " 776,\n",
+       " 651,\n",
+       " 917,\n",
+       " 805,\n",
+       " 678,\n",
+       " 819,\n",
+       " 692,\n",
+       " 822,\n",
+       " 578,\n",
+       " 579,\n",
+       " 580,\n",
+       " 838,\n",
+       " 724,\n",
+       " 736,\n",
+       " 609,\n",
+       " 484,\n",
+       " 492,\n",
+       " 757,\n",
+       " 885,\n",
+       " 888,\n",
+       " 637]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "players_to_remove"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6ffc36f",
    "metadata": {},
    "outputs": [],
    "source": []
